--- a/templates/virtualhost/vhost.conf.erb
+++ b/templates/virtualhost/vhost.conf.erb
@@ -1,13 +1,15 @@
 # File Managed by Puppet
 
 <VirtualHost <%= @ip_addr %>:<%= @port %>>
+<% if @wordpress_multisite_subdomain != false -%>
+    ProxyPassMatch ^/([_0-9a-zA-Z-]+/)?((wp-(content|admin|includes)|webhooks)/.*\.php(/.*)?)$  fcgi://127.0.0.1:9042<%= @real_docroot %>$2
+    ProxyPassMatch ^/([_0-9a-zA-Z-]+/)?(.*\.php(/.*)?)$ fcgi://127.0.0.1:9042<%= @real_docroot %>$2
+<% end -%>
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9042<%= @real_docroot %>/$1
     ServerAdmin <%= @server_admin_email ||= 'webmaster@localhost' %>
     DocumentRoot <%= @real_docroot %>
 <% if @server_name_value != false -%>
     ServerName <%= @server_name_value %>
-<% end -%>
-<% if @directoryindex != "" -%>
-    DirectoryIndex <%= @directoryindex %>
 <% end -%>
 <% if @serveraliases != "" -%>
 <% if @serveraliases.is_a? Array -%>
@@ -65,16 +67,80 @@
     Alias <%= @aliases %>
 <% end -%>
 <% end -%>
-<% if @proxy_aliases != "" -%>
-<% if @proxy_aliases.is_a? Array -%>
-<% @proxy_aliases.each do |singleproxyalias| %>
+</VirtualHost>
 
-    ProxyPass <%= singleproxyalias %>
-    ProxyPassReverse <%= singleproxyalias %>
+
+<% if @ssl != false -%>
+<VirtualHost <%= @ip_addr %>:443>
+<% if @wordpress_multisite_subdomain != false -%>
+    ProxyPassMatch ^/([_0-9a-zA-Z-]+/)?((wp-(content|admin|includes)|webhooks)/.*\.php(/.*)?)$  fcgi://127.0.0.1:9042<%= @real_docroot %>$2
+    ProxyPassMatch ^/([_0-9a-zA-Z-]+/)?(.*\.php(/.*)?)$ fcgi://127.0.0.1:9042<%= @real_docroot %>$2
+<% end -%>
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9042<%= @real_docroot %>/$1
+    ServerAdmin <%= @server_admin_email ||= 'webmaster@localhost' %>
+    DocumentRoot <%= @real_docroot %>
+<% if @server_name_value != false -%>
+    ServerName <%= @server_name_value %>
+<% end -%>
+<% if @serveraliases != "" -%>
+<% if @serveraliases.is_a? Array -%>
+    ServerAlias <%= @serveraliases.flatten.join(" ") %>
+<% else -%>
+    ServerAlias <%= @serveraliases %>
+<% end -%>
+<% end -%>
+<% if @env_variables != "" -%>
+<% if @env_variables.is_a? Array -%>
+<% env_variables.each do |envvars| -%>
+    SetEnv <%= envvars %>
+<% end -%>
+<% end -%>
+<% end -%>
+
+    ErrorLog  <%= scope.lookupvar('apache::log_dir') %>/<%= @name %>-error_log
+    CustomLog <%= scope.lookupvar('apache::log_dir') %>/<%= @name %>-access_log common
+
+<% if @bool_passenger -%>
+    PassengerHighPerformance <%= @bool_passenger_high_performance ? "On" : "Off" %>
+    PassengerMaxPoolSize <%= @passenger_max_pool_size %>
+    PassengerPoolIdleTime <%= @passenger_pool_idle_time %>
+    PassengerMaxRequests <%= @passenger_max_requests %>
+    PassengerStatThrottleRate <%= @passenger_stat_throttle_rate %>
+    RackAutoDetect <%= @bool_passenger_rack_auto_detect ? "On" : "Off" %>
+    RailsAutoDetect <%= @bool_passenger_rails_auto_detect ? "On" : "Off" %>
+
+    <% if @passenger_rails_env != ''      %>RailsEnv <%= @passenger_rails_env %><% end %>
+    <% if @passenger_rack_env != ''       %>RackEnv <%= @passenger_rack_env %><% end %>
+    <% if @passenger_rails_base_uri != '' %>RailsBaseURI <%= @passenger_rails_base_uri %><% end %>
+    <% if @passenger_rack_base_uri != ''  %>RackBaseURI <%= @passenger_rack_base_uri %><% end %>
+
+<% end -%>
+<% if @directory_options != "" || @directory_allow_override != "None" || @directory_require != "" -%>
+    <Directory <%= @real_directory %>>
+<% if @directory_options != "" -%>
+        Options <%= @directory_options %>
+<% end -%>
+<% if @directory_allow_override != "None" -%>
+        AllowOverride <%= @directory_allow_override %>
+<% end -%>
+<% if @directory_require != "" -%>
+        Require <%= @directory_require %>
+<% end -%>
+    </Directory>
+<% end -%>
+
+<% if @aliases != "" -%>
+<% if @aliases.is_a? Array -%>
+<% @aliases.each do |singlealias| %>
+    Alias <%= singlealias %>
 <% end -%>
 <% else -%>
-    ProxyPass <%= @proxy_aliases %>
-    ProxyPassReverse <%= @proxy_aliases %>
+    Alias <%= @aliases %>
 <% end -%>
 <% end -%>
+
+    SSLEngine on
+    SSLCertificateFile /vagrant/provision/lib/ssl/ouro.crt
+    SSLCertificateKeyFile /vagrant/provision/lib/ssl/ouro.key
 </VirtualHost>
+<% end -%>
